--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -5,7 +5,7 @@
   </div>
   <div>
     <label>name: </label>
-    <input [(ngModel)]="hero.name" placeholder="name" />
+    <input id="selecthero" [(ngModel)]="hero.name" placeholder="name" />
   </div>
   <button (click)="goBack()">Back</button>
   <button (click)="save()">Save</button>
