--- a/src/app/hero-list/hero-list.component.css
+++ b/src/app/hero-list/hero-list.component.css
@@ -12,12 +12,15 @@
     cursor: pointer;
     position: relative;
     left: 0;
-    background-color: #EEE;
+    background-color: orange;
     margin: .5em;
     padding: .3em 0;
     height: 1.6em;
     border-radius: 4px;
   }
+#selecthero {
+  color:orange;
+}
   .heroes li.selected:hover {
     background-color: #BBD8DC !important;
     color: white;
@@ -45,3 +48,4 @@
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
   }
+
